--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "classnames": "^2.3.2",
     "framer-motion": "^10.16.4",
     "immer": "^10.0.3",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
+    "primereact": "^10.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "reset-css": "^5.0.2",
     "zustand": "^4.4.4"
   },
   "devDependencies": {
