--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.+(js|jsx|ts|tsx)\""
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    }
+  },
   "dependencies": {
     "axios": "^1.5.1",
     "classnames": "^2.3.2",
     "framer-motion": "^10.16.4",
+    "husky": "^8.0.3",
     "immer": "^10.0.3",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
